# open_manipulator_with_Inception_v3

./: README.md
open_manipulator_master_slave/: CMakeLists.txt
open_manipulator_master_slave/include/open_manipulator_master_slave/: open_manipulator_master.h
open_manipulator_master_slave/launch/: open_manipulator_play_recorded_trajectory .launch  open_manipulator_recording_trajectory.launch
open_manipulator_master_slave/src/: open_manipulator_play_recorded_trajectory.cpp  open_manipulator_recording_trajectory.cpp
ros_inception_v3/: image_recognition.py  output_labels.txt
